Update code and data after revisions

--- a/Python/Mean and maximum rooting depth.ipynb
+++ b/Python/Mean and maximum rooting depth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,19 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average height: 693 pixels\n",
-      "Minimum height: 612 pixels\n",
-      "Maximum height: 990 pixels\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Get summary statistics for height (training images)\n",
     "print(\"Average height: \"+str(round(statistics.mean(h)))+\" pixels\")\n",
@@ -64,19 +54,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Average width: 671 pixels\n",
-      "Minimum width: 643 pixels\n",
-      "Maximum width: 872 pixels\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Get summary statistics for width (training images)\n",
     "print(\"Average width: \"+str(round(statistics.mean(w)))+\" pixels\")\n",
@@ -86,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,8 +77,9 @@
     "path=\"Z:/Poem/Rhizoboxes/Backup_RootPainter/drive_rp_sync/projects/PE_rhizotrons_2017_1/results/segmentations\"\n",
     "files=os.listdir(path)\n",
     "\n",
-    "#Create empty array to story mean rooting depth values\n",
+    "#Create empty array to story mean and max rooting depth values\n",
     "mrd=[]\n",
+    "maxrd=[]\n",
     "\n",
     "for file in files:\n",
     "        \n",
@@ -124,21 +105,23 @@
     "        depth=np.array(range(0, len(px), 1))*(-1)/res\n",
     "    \n",
     "        mrd.append(np.sum(depth*np.array(px))/totalpx)\n",
+    "        maxrd.append(depth[np.max(np.nonzero(px))])\n",
     "        \n",
     "    else:\n",
     "        \n",
-    "        mrd.append(0)"
+    "        mrd.append(0)\n",
+    "        maxrd.append(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Save results in a csv file (results.csv)\n",
     "output=\"Z:/Poem/Rhizoboxes/Backup_RootPainter/drive_rp_sync/projects/PE_rhizotrons_2017_1/results/segmentations\"\n",
-    "results=pd.DataFrame(data={'image': files, 'mrd':mrd}).sort_values(by='image')\n",
+    "results=pd.DataFrame(data={'image': files, 'mrd':mrd, 'maxrd':maxrd}).sort_values(by='image')\n",
     "results.to_csv(output+'/results.csv', index=False)"
    ]
   }
